--- a/src/www/index.html
+++ b/src/www/index.html
@@ -19,7 +19,13 @@
                 <div class="commu-text">ああああああああああああああああああああああああああああaaaaaaaあああああ<br>♡♡！！！？？？？？？？？？？？？？？えええ…そんなこともあったなあ＊＊＊〜〜〜</div>
             </div>
         </div>
-
+        <script type="text/javascript">
+            if(window.screen.orientation.type==="portrait-primary"){
+                document.querySelector(".wrapper").classList.add("portrait");
+            }else{
+                document.querySelector(".wrapper").classList.add("landscape");
+            }
+        </script>
         <script type="text/javascript" src="js/eventListener/changeWindowSizeListener.js"></script>
         <script type="text/javascript" src="js/module/keepAspectRatio.js"></script>
         <!--script type="text/javascript" src="js/eventListener/clickListener.js"></script>
