--- a/src/www/index.html
+++ b/src/www/index.html
@@ -16,7 +16,10 @@
 
             <div class="commu-screen">
                 <div class="commu-name">テストP</div>
-                <div class="commu-text">ああああああああああああああああああああああああああああaaaaaaaあああああ<br>♡♡！！！？？？？？？？？？？？？？？えええ…そんなこともあったなあ＊＊＊〜〜〜</div>
+                <div class="commu-text">
+                    ああああああああああああああああああああああああああああaaaaaaaあああああ<br>
+                    ♡♡！！！？？？？？？？？？？？？？？えええ…そんなこともあったなあ＊＊＊〜〜〜
+                </div>
             </div>
         </div>
         <script type="text/javascript">
@@ -26,9 +29,13 @@
                 document.querySelector(".wrapper").classList.add("landscape");
             }
         </script>
-        <script type="text/javascript" src="js/eventListener/changeWindowSizeListener.js"></script>
-        <script type="text/javascript" src="js/module/keepAspectRatio.js"></script>
-        <!--script type="text/javascript" src="js/eventListener/clickListener.js"></script>
-        <script type="text/javascript" src="js/model/state.js"></script-->
+        <script type="text/javascript" src="js/model/state.js"></script>
+        <script type="text/javascript" src="js/utils/const.js"></script>
+        <script type="text/javascript" src="js/utils/environment.js"></script>
+        <script type="text/javascript" src="js/controller/keepAspectRatioController.js"></script>
+        <script type="text/javascript" src="js/module/keepAspectRatioModule.js"></script>
+        <script type="text/javascript" src="js/controller/stepController.js"></script>
+        <script type="text/javascript" src="js/module/fetchConfigModule.js"></script>
+        <!--script type="text/javascript" src="js/model/state.js"></script-->
     </body>
 </html>
