scriptタグを追記して仮のメッセージを削除した。

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -17,8 +17,6 @@
             <div class="commu-screen">
                 <div class="commu-name">テストP</div>
                 <div class="commu-text">
-                    ああああああああああああああああああああああああああああaaaaaaaあああああ<br>
-                    ♡♡！！！？？？？？？？？？？？？？？えええ…そんなこともあったなあ＊＊＊〜〜〜
                 </div>
             </div>
         </div>
@@ -29,13 +27,22 @@
                 document.querySelector(".wrapper").classList.add("landscape");
             }
         </script>
+        <script type="text/javascript" src="js/utils/debug.js"></script>
+
         <script type="text/javascript" src="js/model/state.js"></script>
+        <script type="text/javascript" src="js/model/info.js"></script>
         <script type="text/javascript" src="js/utils/const.js"></script>
         <script type="text/javascript" src="js/utils/environment.js"></script>
-        <script type="text/javascript" src="js/controller/keepAspectRatioController.js"></script>
         <script type="text/javascript" src="js/module/keepAspectRatioModule.js"></script>
+        <script type="text/javascript" src="js/controller/keepAspectRatioController.js"></script>
+
+        <script type="text/javascript" src="js/view/nameView.js"></script>
+        <script type="text/javascript" src="js/view/textView.js"></script>
+
+        <script type="text/javascript" src="js/module/eventHandleModule.js"></script>
+        <script type="text/javascript" src="js/module/stepModule.js"></script>
         <script type="text/javascript" src="js/controller/stepController.js"></script>
         <script type="text/javascript" src="js/module/fetchConfigModule.js"></script>
-        <!--script type="text/javascript" src="js/model/state.js"></script-->
+        <script type="text/javascript" src="js/module/fetchSceneModule.js"></script>
     </body>
 </html>
